--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.16"
+    "vue-draggable-next": "^2.1.1",
+    "vue-router": "^4.0.16",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
