--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
+    "sass-loader": "^13.0.1",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
